--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </div>
   <nav class="navbar">
     <div class="logotipo">
-        <img src="./img/Logo DW sem fundo 2.svg" alt="Logo da DW Logística">
+      <img src="./img/Logo DW sem fundo 2.svg" alt="Logo da DW Logística">
     </div>
     <div class="menu-toggle">
         <div class="hamburger" id="hamburger">
@@ -57,13 +57,13 @@
 
   <section class="principal" id="inicio">
     <video class="background-video" autoplay muted loop playsinline>
-      <source src="./img/backanimado.mp4" type="video/mp4">
+      <source src="./img/Vídeo do WhatsApp de 2025-02-24 à(s) 00.55.54_5399815a.mp4" type="video/mp4">
       Seu navegador não suporta vídeos em HTML5.
     </video>
     <div class="itens-principal">
       <p>Bem-vindo à sua nova parceria no transporte</p>
       <h1>DW Logística</h1>
-      <a href="#contato" class="btn">Solicite seu orçamento</a>
+      <a href="https://wa.me/5511959553747?text=Olá%20Denis,%20Gostaria%20De%20Fazer%20Uma%20Cotação." class="btn">Solicite seu orçamento</a>
     </div>
   </section>
   <section class="servicos" id="servicos">
@@ -187,7 +187,7 @@
           logísticos. Trabalhamos com transparência e responsabilidade, sempre buscando superar expectativas e
           fortalecer parcerias duradouras. Na <strong>DW Logística</strong>, sua carga está em boas mãos.
         </p>
-        <a href="#contato" class="btn">Solicite Seu Orçamento</a>
+        <a href="https://wa.me/5511959553747?text=Olá%20Denis,%20Gostaria%20De%20Fazer%20Uma%20Cotação." class="btn">Solicite seu orçamento</a>
       </section>
     </div>
   </section>
